--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
     <div class="header-top">
         <!-- More (Tablet , Mobile) -->
         <button class="more">
-            <img src="./assests/icons/more.svg" alt="" class="more__icon">
+            <img src="./assests/icons/more.svg" alt="" class="more__icon icon">
         </button>
         <a href="./" class="logo">
             <img src="./assests/icons/main_icon.svg" alt="grocerymart" class="logo__icon">
@@ -12,28 +12,33 @@
             <ul class="nav__list">
                 <li class="nav__item">
                     Departments
-                    <img src="./assests/icons/down.svg" alt="" class="nav__icon">
+                    <img src="./assests/icons/down.svg" alt="" class="nav__icon icon">
                 </li>
                 <li class="nav__item">
                     Grocery
-                    <img src="./assests/icons/down.svg" alt="" class="nav__icon">
+                    <img src="./assests/icons/down.svg" alt="" class="nav__icon icon">
                 </li>
                 <li class="nav__item">
                     Beauty
-                    <img src="./assests/icons/down.svg" alt="" class="nav__icon">
+                    <img src="./assests/icons/down.svg" alt="" class="nav__icon icon">
                 </li>
             </ul>
         </nav>
         <div class="action">
             <div class="action__group">
                 <button class="action__btn action__btn--single">
-                    <img src="./assests/icons/light.svg" alt="" class="action__icon">
+                    <img src="./assests/icons/light.svg" alt="" class="action__icon icon">
+                </button>
+            </div>
+            <div class="action__group action__switch">
+                <button class="action__btn action__btn--single">
+                    <img src="./assests/icons/moon.svg" alt="" class="action__icon icon">
                 </button>
             </div>
             <div class="action__group">
                 <div class="action__wrap">
                     <button class="action__btn">
-                        <img src="./assests/icons/heart.svg" alt="" class="action__icon">
+                        <img src="./assests/icons/heart.svg" alt="" class="action__icon icon">
                         03
                     </button>
                 </div>
@@ -44,7 +49,7 @@
     
                 <div class="action__group">
                     <button class="action__btn">
-                        <img src="./assests/icons/buy.svg" alt="" class="action__icon">
+                        <img src="./assests/icons/buy.svg" alt="" class="action__icon icon">
                         $65.42
                     </button>
                 </div>
